--- a/firefox/options.html
+++ b/firefox/options.html
@@ -3,23 +3,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="options.css">
+    <link rel="stylesheet" type="text/css" href="css/options.css">
   </head>
 
   <body>
     <fieldset>
-      <legend>Choose which feeds to remove</legend>
+      <legend>Options</legend>
 
-      <div>
-          <input type="checkbox" id="facebook" class="RYS_setting_checkbox" name="feature"
-                 value="facebook" checked />
-          <label for="facebook">Facebook News Feed</label>
+      <div style="display:none;">
+        <input type="checkbox" id="option_template" name="feature" value="option_template" checked />
+        <label for="option_template">Checkbox Template</label>
       </div>
 
       <div>
-          <input type="checkbox" id="instagram" class="RYS_setting_checkbox" name="feature"
-                 value="instagram" checked />
-          <label for="instagram">Instagram Explore Page</label>
+        <input type="checkbox" id="remove_facebook_newsfeed" name="feature" value="remove_facebook_newsfeed" checked />
+        <label for="remove_facebook_newsfeed">Facebook News Feed</label>
+      </div>
+
+      <div>
+        <input type="checkbox" id="remove_instagram_explore" name="feature" value="remove_instagram_explore" checked />
+        <label for="remove_instagram_explore">Instagram Explore Page</label>
       </div>
 
       <hr>
@@ -33,14 +36,14 @@
       <div id="help-header">
       Help us make this addon better!
       </div>
-      <!-- <hr> -->
-      <!-- Submit feedback <a href="https://docs.google.com/forms/d/e/1FAIpQLScdrPlVKpJTGeDhD85HdYD2opsedlPqaMdN3ZW-ZSRwhqBZpw/viewform">here</a>. -->
-      <!-- <br> -->
-      <!-- Donate <a href="https://www.paypal.com/donate/?cmd=_donations&business=FF9K9YD6K6SWG&currency_code=USD&amount=5">here</a>. -->
+      <hr>
+      Submit feedback <a href="https://forms.gle/6fhjWSCVLkuFmCy36">here</a>.
+      <br>
+      Donate <a href="https://www.paypal.com/donate/?cmd=_donations&business=FF9K9YD6K6SWG&currency_code=USD">here</a>.
     </div>
 
-    <script src="reload.js"></script>
-    <script src="options.js"></script>
+    <script src="js/reload.js"></script>
+    <script src="js/options.js"></script>
   </body>
 
 </html>
