Add more options

--- a/firefox/options.html
+++ b/firefox/options.html
@@ -21,9 +21,30 @@
       </div>
 
       <div>
+        <input type="checkbox" id="remove_facebook_top_middle_bar" name="feature" value="remove_facebook_top_middle_bar" checked />
+        <label for="remove_facebook_top_middle_bar">Facebook Top Middle Notifications</label>
+      </div>
+
+      <div>
+        <input type="checkbox" id="remove_facebook_left_bar" name="feature" value="remove_facebook_left_bar" checked />
+        <label for="remove_facebook_left_bar">Facebook Left Notifications</label>
+      </div>
+
+      <div>
         <input type="checkbox" id="remove_instagram_explore" name="feature" value="remove_instagram_explore" checked />
         <label for="remove_instagram_explore">Instagram Explore Page</label>
       </div>
+
+      <div>
+        <input type="checkbox" id="remove_instagram_stories" name="feature" value="remove_instagram_stories" checked />
+        <label for="remove_instagram_stories">Instagram Stories</label>
+      </div>
+
+      <div>
+        <input type="checkbox" id="remove_instagram_suggestions" name="feature" value="remove_instagram_suggestions" checked />
+        <label for="remove_instagram_suggestions">Instagram Suggestions</label>
+      </div>
+
 
       <hr>
 
