Add more facebook options

--- a/firefox/options.html
+++ b/firefox/options.html
@@ -16,6 +16,16 @@
       </div>
 
       <div>
+        <input type="checkbox" id="remove_facebook_stories" name="feature" value="remove_facebook_stories" checked />
+        <label for="remove_facebook_stories">Facebook Stories</label>
+      </div>
+
+      <div>
+        <input type="checkbox" id="remove_facebook_rooms" name="feature" value="remove_facebook_rooms" checked />
+        <label for="remove_facebook_rooms">Facebook Rooms</label>
+      </div>
+
+      <div>
         <input type="checkbox" id="remove_facebook_newsfeed" name="feature" value="remove_facebook_newsfeed" checked />
         <label for="remove_facebook_newsfeed">Facebook News Feed</label>
       </div>
