Prepopulate amount (5) in paypal link

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -70,7 +70,7 @@
       <hr>
       Submit feedback <a href="https://forms.gle/6fhjWSCVLkuFmCy36">here</a>.
       <br>
-      Donate <a href="https://www.paypal.com/donate/?cmd=_donations&business=FF9K9YD6K6SWG&currency_code=USD">here</a>.
+      Donate <a href="https://www.paypal.com/donate/?cmd=_donations&business=FF9K9YD6K6SWG&currency_code=USD&amount=5">here</a>.
     </div>
 
     <script src="js/reload.js"></script>
